[package]
name = "expense-sharing-for-ynab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
yew = "0.21"
yew-bootstrap = "*"
ynab-api = { git = "https://github.com/isosphere/ynab-api.git" }
